# tfm_ssl

./: .gitignore  README.md  constants.py  diff_map_generator.py  eda.ipynb  latent_space_interpolation.py  latent_space_visualization.py  latent_space_visualization_tsne.py  main.py  mejoras.md  nohup.out  pyproject.toml  requirements.txt  simple_volume_analyzer.py  ssl_train.py  train_autoencoder.ipynb  train_autoencoder.py  transfer_learning.py  volume_22_analysis.py  volume_22_analysis_grid.py
config/: config_parser.py  defaults.yaml  experiment1.yaml  experiment10_COMPOUND_6.yaml  experiment1_MAE.yaml  experiment2_PERCEPTUAL.yaml  experiment3_SSIM.yaml  experiment4_FFL.yaml  experiment5_ALL_NON_CLY.yaml  experiment5_COMPOUND_1.yaml  experiment6_ALL_CLY.yaml  experiment6_COMPOUND_2.yaml  experiment7_COMPOUND_3.yaml  experiment8_COMPOUND_4.yaml  experiment9_COMPOUND_5.yaml
latent_tsne_analysis/: make_grid.py
losses/: combined_loss.py
metricas/: tabla.py
metrics/: dose_metrics.py  image_metrics.py
notebook_outputs/: dataset_task1_hn.json
notebooks/: train_autoencoder.ipynb
src/: __init__.py  constants.py
src/data_handling/: __init__.py  datasets.py  transforms.py
src/losses/: __init__.py  ffl3d.py  kl_loss.py
src/metrics/: image_metrics.py
src/networks/: autoencoder_kl_sigmoid.py
src/training/: trainer.py
tests/: test_image_metrics.py
utils/: config.py  mlflow_utils.py  utils.py
