[project]
name = "tfm"
version = "1.0.0"
description = "Master's Thesis on Self-Supervised Learning for Medical Image Reconstruction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.0",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "clearml==2.0.0",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "crc32c==2.7.1",
    "cycler==0.12.1",
    "databricks-sdk==0.57.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "docker==7.1.0",
    "donfig==0.8.1.post1",
    "einops==0.8.1",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "filelock==3.13.1",
    "fire==0.7.0",
    "flask==3.1.1",
    "focal-frequency-loss==0.3.0",
    "fonttools==4.58.4",
    "fsspec==2024.6.1",
    "furl==2.1.4",
    "gdown==5.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.40.3",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "greenlet==3.2.3",
    "grpcio==1.73.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "huggingface-hub==0.33.0",
    "humanize==4.12.3",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "itk==5.4.4",
    "itk-core==5.4.4",
    "itk-filtering==5.4.4",
    "itk-io==5.4.4",
    "itk-numerics==5.4.4",
    "itk-registration==5.4.4",
    "itk-segmentation==5.4.4",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "lmdb==1.6.2",
    "lpips==0.1.4",
    "mako==1.3.10",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mlflow==3.1.0",
    "mlflow-skinny==3.1.0",
    "monai==1.5.0",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "nibabel==5.3.2",
    "ninja==1.11.1.4",
    "numcodecs==0.16.1",
    "numpy==2.1.2",
    "nvidia-ml-py==12.575.51",
    "onnx==1.18.0",
    "openslide-bin==4.0.0.8",
    "openslide-python==1.4.2",
    "opentelemetry-api==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "optuna==4.4.0",
    "orderedmultidict==1.0.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pathlib2==2.3.7.post1",
    "pillow==11.0.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyamg==5.2.1",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydicom==3.0.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pynrrd==1.1.3",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-ignite==0.4.11",
    "pytorch-msssim==1.0.0",
    "pytz==2025.2",
    "pywin32==310; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==70.2.0",
    "shellingham==1.5.4",
    "simpleitk==2.5.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "sympy==1.13.1",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.4",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.6.11",
    "torch==2.6.0",
    "torchio==0.20.10",
    "torchvision==0.21.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "waitress==3.0.2",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "zarr==3.0.8",
    "zipp==3.23.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
